WIP(accordion): fixed caret flexbox spacing
affects: @rei/cdr-accordion

--- a/src/components/accordion/styles/CdrAccordion.pcss
+++ b/src/components/accordion/styles/CdrAccordion.pcss
@@ -21,6 +21,7 @@
     color: $heart-of-darkness;
     cursor: pointer;
     display: flex;
+    justify-content: space-between;
     padding: $inset-1-x;
     text-align: left;
     width: 100%;
@@ -75,7 +76,6 @@
 
     .cdr-accordion__label {
       font-weight: bold;
-      width: calc(100% - ($space-1-x + 16px));
     }
 
     .cdr-accordion__content {
